# apps/auth-service/src/routes/auth.router.ts
@@ -1,7 +1,9 @@
 import express, { Router } from "express";
-import { userRegistration } from "../controllers/auth.controller";
+import { loginUser, userRegistration, verifyUser } from "../controllers/auth.controller";
 const router: Router = express.Router();
 
 router.post("/user-registration", userRegistration);
+router.post("/verify-user", verifyUser);
+router.post("/login-user", loginUser);
 
 export default router;
